fix mobile alignment in nav

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -36,7 +36,9 @@ h2, h3 {
 
 
 #projects-carousel > div.carousel-inner > div.item > div:nth-child(1) > div {
-  margin-left: 10%;
+  @media (min-width: 800px) {
+    margin-left: 10%; 
+  }
   margin-top: 5%
 }
 
@@ -74,6 +76,14 @@ a {
   margin: 2px;
   max-width: 325px;
   border: none;
+}
+
+.thoughts {
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  @media (max-width: 375px) {
+    border-bottom: 1px solid #cacaca;
+  }
 }
 
 .card-body {
@@ -187,12 +197,19 @@ textarea {
 }
 
 .navbar{
+  @media (max-width: 375px) {
+    text-align: center;
+  }
   padding: 0px;
   margin-bottom: 20px;
   display: block;
 }
 
 .navbar-brand{
+  @media (max-width: 375px) {
+    margin: 0 auto;
+    padding-left: 17%;
+  }
   font-size: 18px;
   float: left;
   margin-left: 15px;
